--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/js/home.js">
+    <title>Home Kenzie Food</title>
 </head>
 <body>
     
+    <script type="module" src="./src/controller/controleProdutos.js"></script>
+    <script type="module" src="./src/controller/controleCarrinho.js"></script>
+    <script type="module" src="./src/js/home.js"></script>
 </body>
 </html>
