--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./../css/reset.css">
+    <link rel="stylesheet" href="./../css/dashboard.css">
+    <title>Dashboard Kenzie Food</title>
 </head>
 <body>
     
+    <script type="module" src="./../controller/controleProdutos.js"></script>
+    <script type="module" src="./../js/dashboard.js"></script>
 </body>
 </html>
