adicionados handlers do popup

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                         <span>R$ 20,00</span>
                     </div>
                 </li>
+                <li class="caixa_produto">
+                    <img class="img_produto" src="./src/assets/Frame 5.png" alt="">
+                    <div class="detalhes_produto">
+                        <h3>Panqueca de banana com aveia</h3>
+                        <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
+                        <span>R$ 20,00</span>
+                    </div>
+                </li>
                 <!-- lista de produtos -->
             </ul>
         </section>
@@ -82,7 +90,7 @@
                 <div class="carrinho_titlulo">
                     
                     <h1><img src="./src/assets/.png" alt="">Carrinho</h1>
-                    <img src="./src/assets/X.png" alt="">
+                    <img class="botao_fechar_carrinho" src="./src/assets/X.png" alt="">
 
                 </div>
                 <ul class="caixa-produtos">
@@ -127,7 +135,7 @@
         <h1><img src="./src/assets/.png" alt=""> Carrinho</h1>
     </footer>
 
-
+<script type="module" src="./src/js/home.js"></script>
 
 </body>
 
