estilizado mobile first cadastro

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -33,6 +33,11 @@
         
             </form>
         </section>
+        <section>
+            <p>Já possui cadastro?</p>
+            <p>Clique aqui e faça login!</p>
+            <a href="./login.html">Logar-se</a>
+        </section>
     </main>
     <footer>
         <div class="caixa_erro hide">
