--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500&family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/home.css">
 
@@ -41,7 +41,7 @@
         </nav>
     </section>
     <!-- popup do usuario(quando clicar na imagem remover o esconder) -->
-    <section class="popup_usuario esconder">
+    <section class="popup_usuario menu_esconder">
         <div class="caixa_usuario">
             <div class="menu_usuario">
                 <h1>Menu Usuario</h1>
@@ -64,7 +64,11 @@
                     <div class="detalhes_produto">
                         <h3>Panqueca de banana com aveia</h3>
                         <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
-                        <span>R$ 20,00</span>
+                        <p class="categoria">Panificadora</p>
+                        <div class="valores_produto">
+                            <span>R$ 20,00</span>  
+                            <div class="btn_add"><img class="icone_add" src="./src/assets/Text.png" alt=""></div>
+                        </div>
                     </div>
                 </li>
                 <li class="caixa_produto">
@@ -72,7 +76,11 @@
                     <div class="detalhes_produto">
                         <h3>Panqueca de banana com aveia</h3>
                         <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
-                        <span>R$ 20,00</span>
+                        <p class="categoria">Panificadora</p>
+                        <div class="valores_produto">
+                            <span>R$ 20,00</span>  
+                            <div class="btn_add"><img class="icone_add" src="./src/assets/Text.png" alt=""></div>
+                        </div>
                     </div>
                 </li>
                 <li class="caixa_produto">
@@ -80,57 +88,15 @@
                     <div class="detalhes_produto">
                         <h3>Panqueca de banana com aveia</h3>
                         <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
-                        <span>R$ 20,00</span>
+                        <p class="categoria">Panificadora</p>
+                        <div class="valores_produto">
+                            <span>R$ 20,00</span>  
+                            <div class="btn_add"><img class="icone_add" src="./src/assets/Text.png" alt=""></div>
+                        </div>
                     </div>
                 </li>
                 <!-- lista de produtos -->
             </ul>
-
-            <div class="caixa_lista_carrinho">
-
-                <div id="carrinho" class="caixa-carrinho">
-                    <div class="carrinho_titlulo">
-
-                        <h1><img src="./src/assets/.png" alt="">Carrinho</h1>
-                        <img src="./src/assets/X.png" alt="">
-
-                    </div>
-
-
-                    <div class="lista_carrinho">
-
-                        <!-- produtos no carrinho -->
-                        <ul class="caixa-produtos">
-
-                            <li class="item_carrinho">
-                                <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
-                                <div class="detalhes_carrinho">
-                                    <h3>Panqueca de banana... </h3>
-                                    <p>Panificadora</p>
-                                    <span>R$ 20,00</span>
-                                </div>
-                                <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
-                            </li>
-
-                            <li class="item_carrinho">
-                                <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
-                                <div class="detalhes_carrinho">
-                                    <h3>Panqueca de banana... </h3>
-                                    <p>Panificadora</p>
-                                    <span>R$ 20,00</span>
-                                </div>
-                                <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="caixa_total">
-                        <p>Total: R$<span id="total">00.00</span></p>
-                    </div>
-
-
-
-                </div>
         </section>
 
 
@@ -159,7 +125,7 @@
                         <div class="detalhes_carrinho">
                             <h3>Panqueca de banana... </h3>
                             <p>Panificadora</p>
-                            <span>R$ 20,00</span>
+                            <span>R$ 20,00</span>                            
                         </div>
                         <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
                     </li>
