--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <a href="./src/pages/login.html">Login</a>
             <a href="./src/pages/cadastro.html">Cadastro</a>
-            <a href="./src/pages/dashboard.html">Dashboard</a>
+            <a class="usuario_nao_logado" href="./src/pages/dashboard.html">Dashboard</a>
 
         </div>
         
@@ -117,6 +117,42 @@
                             <h3>Panqueca de banana... </h3>
                             <p>Panificadora</p>
                             <span>R$ 20,00</span>
+                        </div>
+                        <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
+                    </li>
+                    <li class="item_carrinho">
+                        <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
+                        <div class="detalhes_carrinho">
+                            <h3>Panqueca de banana... </h3>
+                            <p>Panificadora</p>
+                            <span>R$ 20,00</span>                            
+                        </div>
+                        <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
+                    </li>
+                    <li class="item_carrinho">
+                        <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
+                        <div class="detalhes_carrinho">
+                            <h3>Panqueca de banana... </h3>
+                            <p>Panificadora</p>
+                            <span>R$ 20,00</span>                            
+                        </div>
+                        <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
+                    </li>
+                    <li class="item_carrinho">
+                        <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
+                        <div class="detalhes_carrinho">
+                            <h3>Panqueca de banana... </h3>
+                            <p>Panificadora</p>
+                            <span>R$ 20,00</span>                            
+                        </div>
+                        <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
+                    </li>
+                    <li class="item_carrinho">
+                        <img class="imagem_carrinho" src="./src/assets/unsplash_eeqbbemH9-c.png" alt="">
+                        <div class="detalhes_carrinho">
+                            <h3>Panqueca de banana... </h3>
+                            <p>Panificadora</p>
+                            <span>R$ 20,00</span>                            
                         </div>
                         <img class="botao_remove" src="./src/assets/apagar-icon.png" alt="">
                     </li>
