Feat: Adicionado funções de filtro

--- a/index.html
+++ b/index.html
@@ -57,23 +57,7 @@
     <main>
         <section class="caixa-lista-produtos" id="lista-produtos">
             <ul class="lista_produtos">
-                <li class="caixa_produto">
-                    <img class="img_produto" src="./src/assets/Frame 5.png" alt="">
-                    <div class="detalhes_produto">
-                        <h3>Panqueca de banana com aveia</h3>
-                        <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
-                        <span>R$ 20,00</span>
-                    </div>
-                </li>
-                <li class="caixa_produto">
-                    <img class="img_produto" src="./src/assets/Frame 5.png" alt="">
-                    <div class="detalhes_produto">
-                        <h3>Panqueca de banana com aveia</h3>
-                        <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
-                        <span>R$ 20,00</span>
-                    </div>
-                </li>
-                <!-- lista de produtos -->
+                
             </ul>
         </section>
         <!-- popup carrinho de compras mobile -->
@@ -128,7 +112,7 @@
     </footer>
 
 
-
+<script type="module" src="src/js/home.js"></script>
 </body>
 
 </html>
