fix: organizando DOM

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
 
         <section class="caixa-lista-produtos" id="lista-produtos">
             <ul class="lista_produtos">
-              
+                  <li class="caixa_produto">
+                    <img class="img_produto" src="./src/assets/Frame 5.png" alt="">
+                    <div class="detalhes_produto">
+                        <h3>Panqueca de banana com aveia</h3>
+                        <p>Esta receita serve muito bem 2 pessoas, deixa a gente bem satisfeito, se não tiver outra opção de café. Se tiver mais comida, como pães e frutas.</p>
+                        <p class="categoria">Panificadora</p>
+                        <div class="valores_produto">
+                            <span>R$ 20,00</span>  
+                            <div class="btn_add"><img class="icone_add" src="./src/assets/Text.png" alt=""></div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </section>
 
